 allow #:tag argument for % and f-control
racket/future: handling of internal stack overflow without
 necessarily blocking on process 0; added 'overflow and
 'start-overflow-work log events
racket/base: guarantee portable results for current-seconds
 and file-or-directory-modify-seconds
compiler/zo-structs: added a context field to all-from-module

Version 5.3.0.10
racket/base: add progress-evt?, thread-cell-values?, prefab-key?,
 semaphore-peek-evt?, channel-put-evt?
Changed #lang for most languages so that it cannot be nested;
 this change is within syntax/module-reader and applies to
 racket, racket/base, and more
racket/com: don't always infer 'any for the element type of a
 multidimensional array 
Changed local-expand to not add core forms if the stop list has
 just module*
racket/math: added degrees->radians, radians->degrees, nan?,
 infinite?, exact-round, exact-floor, exact-ceiling, exact-truncate;
 fixed sinh and tanh to return correct answers given extreme and non-
 rational values like -inf.0, -0.0, -min.0 (see unstable/flonum for
 definition); fixed handling of single flonums in sinh, cosh, tanh
 and sgn

Version 5.3.0.9
Changed the format of error messages
Added raise-argument-error, raise-result-error,
 raise-arguments-error, raise-range-error
racket/contract: added procedure-arity-includes/c
racket/sandbox: added sandbox-propagate-exceptions
racket/cmdline: add #:ps for command-line
slideshow/start: run a `slideshow' or `main' submodule, if any
Changed impersonate-struct so that accessor impersonation requires
 work only if the field is accessible via the current impersonator
 or a mutator for the same field is also impersonated

Version 5.3.0.8
Required modules are instantiated in the order that they are required
Added variable-reference->module-path-index
Added syntax-local-submodules
Added relative-in

Version 5.3.0.7
compiler/zo-struct: added cancel-id field to phase-shift

Version 5.3.0.6
racket/flonum: added flexpt